# crud_project_ls21

./: .gitignore  Makefile  README.md  pyproject.toml
crud_project_ls21/: app.py
tests/: test_app.py
